--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,6 @@
+*{
+	margin:0;
+}
 body,html{
 	font-size: 16px;
 	line-height: 20px;
@@ -8,6 +11,17 @@ body,html{
 	margin: 0px;
 	font-family: 'Fira Sans',-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"
 
+}
+
+
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+    color: #fff;
+}
+.navbar-light .navbar-nav .nav-link {
+    color: #fff;
+}
+.navbar-light .navbar-nav .nav-link:hover {
+    color: #cabe04;
 }
 .login-page{
 	background-color: #ccc;
@@ -27,40 +41,8 @@ body,html{
     font-weight: bold;
     text-transform: uppercase;
 }
-.home-page{
-  background-image: url(../../images/beige_paper.png);
-  background-color: #ccc;
-}
-.menu{
-  padding:0px;
-}
-.menu li{
-  list-style: none;
-  display: inline;
-}
-.menu li a{
-  display: inline-block;
-  width: 202px;
-  height: 152px;
-  background: #fff;
-  text-align: center;
-  border-radius: 2px;
-  border:1px solid #eee;
-  text-decoration: none;
-}
-.menu li a > .content p:hover{
-    color: #000;
-		transition: all 0.5s;
-}
-.menu li a > .content img:hover{
-		transition: all 0.5s;
-}
-.menu li a > .content p{
-  color: #6716b9;
-  font-size: 18px;
-  font-weight: 800;
-	text-transform: uppercase;
-}
+
+
 .footer{
 	position: absolute;
 	bottom: -10px;
@@ -72,48 +54,5 @@ body,html{
 	width:100px;
 	text-align: center;
 }
-.header-wrapper{
-	display: flex;
-	justify-content: flex-start;
-	flex-direction: row;
-}
-.server-list li{
-	font-weight:800;
-}
-.server-list li > p{
-	font-weight: normal;
-}
-.quickmenu{
-	position: fixed;
-	left: 20px;
-}
-.quickmenu ul li{
-	list-style: none;
-}
-.quickmenu ul{
-	padding: 0px;
-}
-.quickmenu .title{
-   font-size: 15px;
-   text-align: center
-}
-.quickmenu ul li a{
-	margin-bottom: 10px;
-}
-.setting_panel{
-	margin-top: 70px;
-	background: #FFF;
-	padding: 20px;
-	border-radius: 5px;
-}
-.setting_panel h4{
-	margin-bottom: 15px;
-}
-.set{
-	font-size: 14px;
-	font-weight: bold;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	margin-bottom: 10px;
-}
+
+
