Added charts for data visualization

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,6 +13,9 @@ body,html{
 
 }
 
+.switch-mode{
+	color: white;
+}
 
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     color: #fff;
