modified file structure

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,6 +17,11 @@ body,html{
 	color: white;
 }
 
+.card-header {
+	background-color: rgba(40, 167, 69,.9);
+	color: white;
+}
+
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
     color: #fff;
 }
